# bat-native-bip39wally-core

./: BUILD.gn  SIDEKICK_README.txt
include/: wally_address.h  wally_bip39.h
src/: bip39.cc  internal.cc  internal.h
src/cpufeatures/: cpu-features.c
